<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout5"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.CheckOut">

    <TextView
        android:id="@+id/textView23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/checkOut"
        android:textColor="@color/primary"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="40dp"
        android:text="@string/orderTotal"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView23" />

    <EditText
        android:id="@+id/cardNum"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_marginTop="160dp"
        android:ems="10"
        android:hint="@string/cardNumber"
        android:inputType="number"
        android:textColorHint="@color/primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView23" />

    <EditText
        android:id="@+id/expireDate"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_marginTop="52dp"
        android:ems="10"
        android:hint="@string/expireDate"
        android:inputType="text"
        android:textColor="@color/primary"
        android:textColorHint="@color/primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardNum" />

    <TextView
        android:id="@+id/totalAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="TextView"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.802"
        app:layout_constraintStart_toEndOf="@+id/textView24"
        app:layout_constraintTop_toBottomOf="@+id/textView23" />

    <EditText
        android:id="@+id/cvv"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_marginTop="52dp"
        android:ems="10"
        android:hint="@string/cvv"
        android:inputType="number"
        android:textColor="@color/primary"
        android:textColorHint="@color/primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/expireDate" />

    <Button
        android:id="@+id/checkOutbtn"
        android:layout_width="160dp"
        android:layout_height="60dp"
        android:layout_marginTop="112dp"
        android:layout_marginEnd="40dp"
        android:backgroundTint="@color/secondary"
        android:text="@string/checkOut"
        android:textColor="@color/accent"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvv" />
</androidx.constraintlayout.widget.ConstraintLayout>