<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.profile" >

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:src="@drawable/images"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="196dp"
        android:layout_marginTop="44dp"
        android:text="@string/sign_up_name"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/sign_up_email"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editNameTxt" />

    <Button
        android:id="@+id/deactivateBtn"
        android:layout_width="140dp"
        android:layout_height="60dp"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="36dp"
        android:backgroundTint="@color/accent"
        android:text="@string/Deactivate"
        android:textColor="@color/red"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeColor="@color/red"
        app:strokeWidth="1dp" />

    <Button
        android:id="@+id/logoutBtn"
        android:layout_width="140dp"
        android:layout_height="60dp"
        android:layout_marginStart="168dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="36dp"
        android:backgroundTint="@color/red"
        android:text="@string/logout"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/deactivateBtn" />

    <EditText
        android:id="@+id/editNameTxt"
        android:layout_width="380dp"
        android:layout_height="60dp"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:inputType="text"
        android:text="Name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/emailEditTxt"
        android:layout_width="380dp"
        android:layout_height="60dp"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/sign_up_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/editBtn"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_marginTop="53dp"
        android:text="@string/edit_btn"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailEditTxt" />

</androidx.constraintlayout.widget.ConstraintLayout>